resources/mobile.css
/* MMONITOR ULTRA WIDE */
@media (max-width: 2560px) {
    .episode-title,
    #group-series-button {
        width: 225px;
    }

    #continue-episode-button, #episode-button {
        width: 250px;
    }

    .wrapper {
        min-height: 800px;
    }

    .slider {
        max-height: 800px;
    }
    
    .description-thumb,
    #series-description{
        /* min-height: 80vh; */
    }

    .description-content{
       padding: 180px 100px 100px 100px;
    }
}

/* MONITOR FULL HD - 1080P */
@media (max-width: 1920px) {

}

/* MONITOR MEDIANO  - 720P */
@media (max-width: 1366px) {
    .episode-title,
    #group-series-button {
        width: 230px;
    }

    #continue-episode-button, #episode-button {
        width: 230px;
    }

    .wrapper {
        min-height: 500px;
    }

    .slider {
        max-height: 500px;
    }

    .description-thumb,
    #series-description{
        /* min-height: 80vh; */
    }

    .description-content{
       padding: 100px 100px 100px 100px;
    }
}

/* MONITOR PEQUENO - MOBILE */
@media (max-width: 768px) {
    header {
        padding: 5px; /* Reduz padding em telas menores */
    }

    header h1 {
        font-size: 20px; /* Já definido no seu CSS */
    }

    #main {
        padding-top: 50px; /* Ajuste para altura menor do header */
    }

    .wrapper {
        min-height: 200px;
    }

    .slider {
        max-height: 200px;
    }

    .content {
        opacity: 0;
    }
    
    .slider .arrow {
        opacity: 1;
        visibility: visible;
    }
    
    .carousel-inner .item  {
        height: 200px;
    }

    .arrow {
        width: 50px;
    }

    .slider .arrow svg {
        width: 38px;
        height: 38px;
    }

    .dots label {
        width: 30px;
    }

    .dots-container {
        opacity: 0;
        /* pointer-events: none; */
    }
    
    #group-series-cards {
        gap: 17px;
    }

    #group-search {
        flex-direction: column;
        align-items: stretch;
    }

    #keys {
        /* order: 2; */
        gap: 5px;
        z-index: 2;
        justify-content: center;
        flex-wrap: wrap;
    }

    #search {
        /* order: 1; */
        width: 100%;
        justify-content: center;
    }

    .container-input {
        width: 30px;
    }

    .container-input {
        width: 100%;
    }
    .container-input:hover,
    .container-input:focus-within {
        width: 100%;
    }

    #keys button {
        padding: 4px;
        font-size: 10px;
    }

    #group-series-button {
        width: 160px;
        height: 250px;
    }

    .episode-title {
        width: 160px;
    }

    #group-series-button .info h1 {
        font-size: 11px;
    }

    #group-series-button .info p {
        font-size: 10px;
    }

    #group-series-button .info button {
        padding: 0.4rem;
    }

    #logo,
    #back-button {
        font-size: 20px;
        width: 35px;
        height: 35px;
        line-height: 35px;
    }

    #continue-episode-button, #episode-button {
        /* width: 100%; */
        height: 200px;
        width: 401px;
    }

    #continue-episode-button:hover, #episode-button:hover {
        transform: scale(1.03);
    }

    .episode-list {
        display: block;
    }

    #current-series-episodes,
    #current-series-header {
        display: block;
    }

    #current-series-header #series-available-text {
        font-size: 22px;
    }

    #season-dropdown {
        width: 100%;
    }

    #video-overlay-header {
        display: block;
    }

    @keyframes fadeInUp {
        0% {
            opacity: 0;
            transform: translateY(-50px);
        }
        100% {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes slideInRight {
        0% { opacity: 0; transform: translateY(-20px); }
        100% { opacity: 1; transform: translateY(0); }
    }

    @keyframes slideOutRight {
        0% { opacity: 1; transform: translateY(0); }
        100% { opacity: 0; transform: translateY(20px); }
    }
}

